samples/_failures_safe/1761355829_8fa35e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58c1f568.c: In function ‘main’:
./samples/SAFE/__tmp_58c1f568.c:126: error: expected ‘{’ at end of input
